[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
governor = "0.5.0"
nonzero_ext = "0.3.0"
tokio = {version="1.21.1", features = ["full"]}
log = "0.4.17"